fixed title spacing issue

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -17,10 +17,7 @@ body {
     height: 100%;
 }
 
-#index-main-col {
-    position:relative;
-    width: 1000px;
-    height: 100%;
+#index-title-offset {
     top: 230px;
 }
 
